# Planner-Agent

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
src/planner_agent/: __init__.py  cli.py  config.py  models.py  scheduling.py
src/planner_agent/agent/: analyst.py  base.py  critic.py  loop.py  orchestrator.py  prompts.py  scout.py  strategist.py
src/planner_agent/agent/prompts/: __init__.py  analyst.py  critic.py  feedback.py  scout.py  strategist.py  tactician.py
src/planner_agent/email/: receiver.py  sender.py  templates.py
src/planner_agent/state/: newsletter.py  store.py
tests/: test_analyst.py  test_critic.py  test_integration.py  test_loop.py  test_migration.py  test_phase3.py  test_scout.py  test_store.py  test_strategist.py  test_web_search.py
